Overflow + Bg fix

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,9 @@ html {
    overflow: hidden !important;
 }
 body {
-   background: url('img/stars.png'), $deepBlue;
+   background: url('../img/stars.png'), $deepBlue;
+   max-height: 100vh;
+   min-height: 100vh;
    overflow: hidden !important;
 }
 
